--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,10 +1,9 @@
-<ion-view view-title="Chats">
+<ion-view view-title="ToDos">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="task in tasks" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
         <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
+        <h2>{{task.task}}</h2>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
         <ion-option-button class="button-assertive" ng-click="remove(chat)">
@@ -12,5 +11,15 @@
         </ion-option-button>
       </ion-item>
     </ion-list>
+
+<label class="item item-input">
+  <span class="input-label">Add task</span>
+  <input type="text" ng-model="addTask.newTask">
+</label>
+<button ng-click="addTask()">Add task</button>
+
   </ion-content>
+
+
+
 </ion-view>
