--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,8 +11,8 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Todo Tab Tab -->
-  <ion-tab title="Todo list" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="Todo list" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/todos">
+    <ion-nav-view name="tab-todos"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
