--- a/www/templates/tab-todos.html
+++ b/www/templates/tab-todos.html
@@ -1,17 +1,22 @@
 <ion-view view-title="Todo list">
 <ion-content>
 <ion-list>
-<ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="task in tasks" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-<h2>{{task.id}} {{task.task}}</h2>
+<ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="task in tasks" type="item-text-wrap" href="#/tab/todos/{{task.id}}">
+<h2>{{task.task}} {{task.deadline | date : format : short}}</h2>
 <i class="icon ion-chevron-right icon-accessory"></i>
-<ion-option-button class="button-assertive" ng-click="remove(chat)">
-Delete
+<ion-option-button class="button-positive" ng-click="remove(chat)">
+Task Done
 </ion-option-button>
 </ion-item>
 </ion-list>
 <label class="item item-input">
-  <i class="icon ion-plus-circled placeholder-icon"></i>
+<span class="input-label">Task</span>
+
   <input type="text" placeholder="What needs to get done?" ng-model="addTask.newTask">
+</label>
+<label class="item item-input">
+  <span class="input-label">Deadline</span>
+  <input type="date" ng-model="addTask.deadLine">
 </label>
 <button class="button button-block button-positive" ng-click="addTask()">
 Add task
