fixed prepopulation of input field with ng-init

--- a/www/templates/tab-todos.html
+++ b/www/templates/tab-todos.html
@@ -2,7 +2,8 @@
 <ion-content>
 <ion-list>
 <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="task in tasks" type="item-text-wrap" href="#/tab/todos/{{task.id}}">
-<h2>{{task.task}} {{task.deadline | date : format : short}}</h2>
+<h2>{{task.task}} </h2>
+<p>{{task.deadline | date : format : short}}</p>
 <i class="icon ion-chevron-right icon-accessory"></i>
 <ion-option-button class="button-positive" ng-click="remove(chat)">
 Task Done
@@ -21,5 +22,10 @@ Task Done
 <button class="button button-block button-positive" ng-click="addTask()">
 Add task
 </button>
+<div class="button-bar">
+  <a class="button">All</a>
+  <a class="button">Pending</a>
+  <a class="button">Done</a>
+</div>
 </ion-content>
 </ion-view>
