--- a/www/templates/todo-detail.html
+++ b/www/templates/todo-detail.html
@@ -11,7 +11,7 @@
 </label>
 <label class="item item-input">
   <span class="input-label">Deadline</span>
-  <input type="date" ng-model="editTask.deadLine">
+  <input type="date" ng-init="editTask.deadLine = tasks.deadline" ng-model="editTask.deadLine">
 </label>
 <button class="button button-block button-positive" ng-click="editTask()">
 Update task
